--- a/headquarters.qmd
+++ b/headquarters.qmd
@@ -42,7 +42,8 @@ state_hq |>
   labs(title = "Location of Fortune 500 Companies' Headquarters",
        subtitle = "New York, California, Texas, Illinois, Ohio, and Pensylvania are the most common states.",
        x = 'Headquarter State Abbreviation',
-       y = 'Count')
+       y = 'Count',
+       caption = 'fortune.com: Fortune 500')
 ```
 
 ```{r}
@@ -53,5 +54,6 @@ city_hq |>
   labs(title = "Location of Fortune 500 Companies' Headquarters",
        subtitle = "New York City, Houston, Atlanta, Chicago, and Dallas are the most common cities.",
        x = 'Headquarter City',
-       y = 'Count')
+       y = 'Count',
+       caption = 'fortune.com: Fortune 500')
 ```
