--- a/newcomers and global 500.qmd
+++ b/newcomers and global 500.qmd
@@ -52,7 +52,8 @@ newcomer |>
                      labels = scales::percent_format()) +
   labs(title = '% of Fortune 500 Companies that are Newcomers to the List from 2015 to 2023',
        subtitle = 'About 5.4% of companies are appearing on the list for the first time.',
-       caption = 'fortune.com: Fortune 500')
+       caption = 'fortune.com: Fortune 500') +
+  theme_classic()
 ```
 
 ```{r}
@@ -69,5 +70,6 @@ global |>
                      labels = scales::percent_format()) +
   labs(title = '% of Fortune 500 Companies that are Global 500 Comapnies from 2016 to 2023',
        subtitle = 'About 24.6% of fortune 500 companies are global 500 companies.',
-       caption = 'fortune.com: Fortune 500')
+       caption = 'fortune.com: Fortune 500') +
+  theme_classic()
 ```
