--- a/monetary statistics.qmd
+++ b/monetary statistics.qmd
@@ -58,7 +58,7 @@ market_value |>
                      labels = scales::dollar_format()) +
   labs(title = 'Mean Market Value of Fortune 500 Companies from 2013 to 2023',
        subtitle = 'Market value has recently spiked.',
-       caption = 'fortune.com: Fortune 500') +
+       caption = 'fortune.com') +
   theme_classic()
 ```
 
@@ -76,7 +76,7 @@ revenue |>
                      labels = scales::dollar_format()) +
   labs(title = 'Mean Revenue of Fortune 500 Companies from 1996 to 2023',
        subtitle = 'There has been steady growth over the years.',
-       caption = 'fortune.com: Fortune 500') +
+       caption = 'fortune.com') +
   theme_classic()
 ```
 
@@ -94,7 +94,7 @@ profit |>
                      labels = scales::dollar_format()) +
   labs(title = 'Mean Profit of Fortune 500 Companies from 2013 to 2023',
        subtitle = 'Profits jumped to record highs in 2022.',
-       caption = 'fortune.com: Fortune 500') +
+       caption = 'fortune.com') +
   theme_classic()
 ```
 
@@ -112,6 +112,6 @@ asset |>
                      labels = scales::dollar_format()) +
   labs(title = 'Mean Assets of Fortune 500 Companies from 2013 to 2023',
        subtitle = 'There has been steady growth over the years.',
-       caption = 'fortune.com: Fortune 500') +
+       caption = 'fortune.com') +
   theme_classic()
 ```
