--- a/headquarters.qmd
+++ b/headquarters.qmd
@@ -38,7 +38,7 @@ city_hq <- unique(fortune) |>
 state_hq |>
   ggplot(aes(x = headquarters_state, y = n)) +
   geom_bar(stat = 'identity', fill = '#0000c0') +
-  theme(axis.text.x = element_text(angle = 90)) +
+  scale_x_discrete(guide = guide_axis(angle = 90)) +
   labs(title = "Location of Fortune 500 Companies' Headquarters",
        subtitle = "New York, California, Texas, Illinois, Ohio, and Pensylvania are the most common states.",
        x = 'Headquarter State Abbreviation',
@@ -51,7 +51,7 @@ state_hq |>
 city_hq |>
   ggplot(aes(x = headquarters_city, y = n)) +
   geom_bar(stat = 'identity', fill = '#0000c0') +
-  theme(axis.text.x = element_text(angle = 90)) +
+  scale_x_discrete(guide = guide_axis(angle = 90)) +
   labs(title = "Location of Fortune 500 Companies' Headquarters",
        subtitle = "New York City, Houston, Atlanta, Chicago, and Dallas are the most common cities.",
        x = 'Headquarter City',
