--- a/monetary statistics.qmd
+++ b/monetary statistics.qmd
@@ -47,8 +47,8 @@ asset$mean_asset_mil[asset$year == 2013] <- 74061.85 - (76292.42 - 74061.85)/2
 ```{r}
 market_value |>
   ggplot(aes(x = year, y = mean_market_value_mil)) +
-  geom_point(color = '#0000c0') +
-  geom_line(color = '#0000c0') +
+  geom_point(color = '#0d6efd') +
+  geom_line(color = '#0d6efd') +
   scale_x_continuous('Year',
                      breaks = c(2013,2015,2017,2019,2021,2023),
                      limits = c(2013,2023)) +
@@ -65,8 +65,8 @@ market_value |>
 ```{r}
 revenue |>
   ggplot(aes(x = year, y = mean_revenue_mil)) +
-  geom_point(color = '#0000c0') +
-  geom_line(color = '#0000c0') +
+  geom_point(color = '#0d6efd') +
+  geom_line(color = '#0d6efd') +
   scale_x_continuous('Year',
                      breaks = c(1996,1999,2002,2005,2008,2011,2014,2017,2020,2023),
                      limits = c(1996,2023)) +
@@ -83,8 +83,8 @@ revenue |>
 ```{r}
 profit |>
   ggplot(aes(x = year, y = mean_profit_mil)) +
-  geom_point(color = '#0000c0') +
-  geom_line(color = '#0000c0') +
+  geom_point(color = '#0d6efd') +
+  geom_line(color = '#0d6efd') +
   scale_x_continuous('Year',
                      breaks = c(2013,2015,2017,2019,2021,2023),
                      limits = c(2013,2023)) +
@@ -101,8 +101,8 @@ profit |>
 ```{r}
 asset |>
   ggplot(aes(x = year, y = mean_asset_mil)) +
-  geom_point(color = '#0000c0') +
-  geom_line(color = '#0000c0') +
+  geom_point(color = '#0d6efd') +
+  geom_line(color = '#0d6efd') +
   scale_x_continuous('Year',
                      breaks = c(2013,2015,2017,2019,2021,2023),
                      limits = c(2013,2023)) +
