--- a/about.qmd
+++ b/about.qmd
@@ -3,7 +3,8 @@ title: "About"
 sidebar: false
 ---
 
-## About this project
+## About this Project
+
 This website was created as my final project for [Kane’s Free Data Science Course](https://bootcamp.davidkane.info/). I loved this course and would recommend it to anybody that wants to learn about Data Science!
 
 ## About Me
